kubernetes/apps/network/netbox/app/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  hostnames:
    - netbox.kawalink.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: kube-system
      sectionName: https1
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: netbox
          namespace: network
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
